error pages linked to home page

--- a/public/404.html
+++ b/public/404.html
@@ -233,7 +233,7 @@
     </p>
   </div>
   <div class="buttons-container">
-    <a class="border-button" href="https://www.snowbot-ai.com" target="_blank">Go To Homepage</a>
+    <a class="border-button" href="https://snowbots-app.herokuapp.com" target="_blank">Go To Homepage</a>
     <!-- <a class="border-button" href="mailto:" target="_blank">Report A Problem</a> -->
   </div>
 </div>
