--- a/public/500.html
+++ b/public/500.html
@@ -235,7 +235,7 @@
 
     </div>
   <div class="buttons-container">
-    <a class="border-button" href="https://snowbots-app.herokuapp.com" target="_blank">Go To Homepage</a>
+    <a class="border-button" href="https://www.snowbot-ai.com" target="_blank">Go To Homepage</a>
   </div>
 </div>
 
